--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .application-header {
     width: 100%;
     padding: 10px 0;
-    background-color: #80ab99;
+    background-color: #cfedea;
 }
 
 .application-header__navigation-menu {
@@ -13,16 +13,16 @@
     font-size: 2rem;
     text-decoration: none;
     margin-right: 15px;
-    color: #472e29;
+    /*color: #528076;*/
 }
 
 .navigation-menu__link:hover {
-    color: #ffffff;
+    /*color: #528076;*/
 }
 
 .navigation-menu__link--active {
     font-weight: 700;
-    color: #ffffff;
+    /*color: #528076;*/
 }
 
 .logo-container {
