--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,5 @@
 .application-footer {
     width: 100%;
-    background-color: #000000;
-    color: #ffffff;
 }
 
 .footer {
@@ -9,4 +7,5 @@
     margin: 0 auto;
     padding: 10px 0;
     font-size: 1.5rem;
+    border-top: 1px solid #993233;
 }
