--- a/src/components/BeverageShortView/BeverageShortView.css
+++ b/src/components/BeverageShortView/BeverageShortView.css
@@ -1,22 +1,22 @@
 .beverage-short-view {
-    padding: 5px;
-    border: 1px solid #bbbbbb;
+    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .beverage-short-view__main {
-    display: flex;
+
 }
 
 .beverage-short-view__description {
-    padding: 5px 0;
     font-size: 1.5rem;
+    padding: 5px;
+    text-align: justify;
 }
 
 .beverage-short-view__footer {
     display: flex;
     justify-content: space-between;
     font-size: 1.8rem;
-    padding: 10px 0;
+    padding: 5px;
 }
 
 .beverage-short-view__image-container {
@@ -24,24 +24,22 @@
 }
 
 .beverage-short-view__main-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0 10px;
     font-size: 2rem;
+    padding: 0 5px;
+    text-align: center;
 }
 
 .main-info__name {
-    padding: 10px 0;
-    font-size: 2.3rem;
+    font-size: 2.1rem;
 }
 
 .main-info__type {
-    padding: 10px 0;
+    font-size: 1.7rem;
+    color: #65737e;
 }
 
 .main-info__category {
-    padding: 10px 0;
+    font-size: 1.7rem;
 }
 
 .bsv-footer__quantity {
@@ -57,6 +55,5 @@
 }
 
 .bsv-image {
-    width: 200px;
-    height: 180px;
+    height: 200px;
 }
