--- a/src/pages/catalog/CatalogPage.css
+++ b/src/pages/catalog/CatalogPage.css
@@ -1,9 +1,20 @@
+.page-component__content {
+    display: flex;
+}
+
+.filters-sidebar {
+    width: 30%;
+}
+
 .catalog {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    width: 70%;
 }
 
 .catalog__item {
+    width: 300px;
     padding: 5px;
     list-style-type: none;
 }
