--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -33,3 +33,17 @@
     width: 40%;
     padding: 50px 50px 0 0;
 }
+
+.description-section {
+    font-size: 2rem;
+    padding-bottom: 50px;
+}
+
+.description__header {
+    color: #993233;
+}
+
+.description__text {
+    text-align: justify;
+}
+
