cart functionality added

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -10,3 +10,8 @@
     background-color: #993233;
     cursor: pointer;
 }
+
+.remove-button {
+    color: #000000;
+    background-color: #f3de81;
+}
