--- a/src/pages/catalogItem/CatalogItem.css
+++ b/src/pages/catalogItem/CatalogItem.css
@@ -1,3 +1,19 @@
 .page-component--catalog-item {
+    display: flex;
     background-color: #fcfff6;
+}
+
+.catalog-item__image-section {
+    width: 50%;
+    padding: 50px;
+}
+
+.catalog-item__description-section {
+    width: 50%;
+    padding-top: 50px;
+    font-size: 1.8rem;
+}
+
+.catalog-item__image {
+
 }
