--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -25,6 +25,11 @@ img {
     width: 100%;
 }
 
+h2 {
+    padding: 0;
+    margin: 0;
+}
+
 .page-component {
     max-width: 1320px;
     margin: 0 auto;
