--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,9 +1,18 @@
 .custom-input {
-    display: inline-block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 3px 0;
+    font-size: 1.8rem;
 }
 
 .custom-input__label {
-    display: inline-block;
-    min-width: 100px;
+    padding-right: 20px;
+}
+
+.custom-input__input {
+    padding: 10px;
+    font-size: 1.8rem;
+    border: 1px solid #dedede;
+    border-radius: 3px;
 }
