--- a/src/pages/catalog/CatalogPage.css
+++ b/src/pages/catalog/CatalogPage.css
@@ -9,12 +9,11 @@
 .catalog {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     width: 70%;
 }
 
 .catalog__item {
-    width: 300px;
+    width: 33%;
     padding: 5px;
     list-style-type: none;
 }
