--- a/src/pages/cart/Cart.css
+++ b/src/pages/cart/Cart.css
@@ -9,6 +9,7 @@
 .shopping-cart__item {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: 1.8rem;
 }
 
