--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -1,4 +1,4 @@
-.custom-input {
+.custom-select {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,15 +6,16 @@
     font-size: 1.8rem;
 }
 
-.custom-input__label {
+.custom-select__label {
     width: 30%;
     padding-right: 20px;
 }
 
-.custom-input__input {
+.custom-select__select {
     width: 70%;
     padding: 10px;
     font-size: 1.8rem;
     border: 1px solid #dedede;
     border-radius: 3px;
+    font-family: 'Source Serif Pro', serif;
 }
