--- a/src/pages/order/Order.css
+++ b/src/pages/order/Order.css
@@ -12,3 +12,41 @@
     font-weight: 700;
     margin-left: 20px;
 }
+
+.order-page__order-info {
+    padding: 20px;
+    font-size: 1.8rem;
+}
+
+.order-info__order-id {}
+
+.order-info__customer-name {}
+
+.order-info__email {}
+
+.order-info__delivery {}
+
+.order-info__payment-method {}
+
+.order-info__items {}
+
+.order-info__items-list {}
+
+.order-info__item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.order-info__total-price {}
+
+.order-info__item-name {
+    flex: 1;
+}
+
+.order-info__item-quantity {
+    flex: 1;
+}
+
+.order-info__price {
+    flex: 1;
+}
