--- a/src/pages/admin/AdminPage.css
+++ b/src/pages/admin/AdminPage.css
@@ -46,8 +46,6 @@
     margin: 0 5px;
 }
 
-.admin-page__orders {}
-
 .orders-list__item-link {
     color: #993233;
     text-decoration: none;
@@ -57,6 +55,6 @@
     text-decoration: underline;
 }
 
-.admin-page__orders-table {
-    font-size: 1.5rem;
+.admin-page__orders {
+    padding: 20px 0;
 }
