--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -7,23 +7,28 @@
 }
 
 .custom-table.ReactTable {
-    border: 1px solid rgba(153,50,51,0.1);
+    /*border: 1px solid rgba(153,50,51,0.1);*/
+    border: none;
 }
 
 .custom-table__wrapper .custom-table.ReactTable .rt-thead .rt-th.-sort-asc, .custom-table.ReactTable .rt-thead .rt-td.-sort-asc {
     box-shadow: inset 0 3px 0 0 rgba(153,50,51,0.6);
+    /*box-shadow: none;*/
 }
 
 .custom-table__wrapper .custom-table.ReactTable .rt-thead .rt-th.-sort-desc, .custom-table.ReactTable .rt-thead .rt-td.-sort-desc {
     box-shadow: inset 0 -3px 0 0 rgba(153,50,51,0.6);
+    /*box-shadow: none;*/
 }
 
 .custom-table.ReactTable .rt-thead.-header {
-    box-shadow: 0 2px 15px 0 rgba(153,50,51,0.15);
+    /*box-shadow: 0 2px 15px 0 rgba(153,50,51,0.15);*/
+    box-shadow: none;
 }
 
 .custom-table.ReactTable .rt-thead .rt-th, .custom-table.ReactTable .rt-thead .rt-td {
-    border-right: 1px solid rgba(153,50,51,0.05);
+    /*border-right: 1px solid rgba(153,50,51,0.05);*/
+    border-right: none;
 }
 
 .custom-table.ReactTable .rt-thead.-filters {
@@ -39,8 +44,10 @@
 }
 
 .custom-table.ReactTable .-pagination {
-    box-shadow: 0 0 15px 0 rgba(153,50,51,0.1);
-    border-top: 2px solid rgba(153,50,51,0.1);
+    /*box-shadow: 0 0 15px 0 rgba(153,50,51,0.1);*/
+    box-shadow: none;
+    /*border-top: 2px solid rgba(153,50,51,0.1);*/
+    border-top: none;
 }
 
 .custom-table.ReactTable .-pagination .-btn {
