--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -57,6 +57,8 @@
     bottom: 0;
     left: 0;
     background: transparent;
+    padding: 50px 100px;
+    text-align: center;
 }
 
 .link-block__link {
