--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -7,12 +7,12 @@
 }
 
 .custom-input__label {
-    width: 30%;
+    /*width: 30%;*/
     padding-right: 20px;
 }
 
 .custom-input__input {
-    width: 70%;
+    /*width: 70%;*/
     padding: 10px;
     font-size: 1.8rem;
     border: 1px solid #dedede;
