--- a/src/pages/cart/Cart.css
+++ b/src/pages/cart/Cart.css
@@ -1,9 +1,9 @@
 .page-component--cart {
-    padding: 20px 0;
+    padding: 50px 0;
 }
 
 .shopping-cart__items-list {
-
+    margin-bottom: 80px;
 }
 
 .shopping-cart__item {
@@ -11,6 +11,10 @@
     justify-content: space-between;
     align-items: center;
     font-size: 1.8rem;
+}
+
+.shopping-cart__item:first-of-type {
+    border-top: 1px solid rgba(101,115,126,0.3);
 }
 
 .shopping-cart__item-name {
@@ -32,22 +36,17 @@
 }
 
 .shopping-cart__total-price {
+    position: absolute;
+    bottom: -50px;
+    left: -25%;
     font-size: 2rem;
     font-weight: 700;
-    padding: 20px 0;
     text-align: center;
 }
 
 .shopping-cart__customer-info {
-    display: flex;
-    flex-direction: column;
     width: 1000px;
     margin: 0 auto;
-}
-
-.shopping-cart__customer-info .custom-button-wrapper {
-    margin-top: 15px;
-    align-self: center;
 }
 
 .shopping-cart__oder-description {
@@ -61,4 +60,32 @@
 .shopping-cart__empty {
     font-size: 3rem;
     text-align: center;
+}
+
+.shopping-cart__item-prop {
+    position: relative;
+}
+
+.shopping-cart__item-header {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    font-weight: 700;
+}
+
+.customer-info__button {
+    margin-top: 15px;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    width: 100%;
+}
+
+.customer-info__fieldset {
+    border: 1px solid rgba(153,50,51,0.3);
+    padding: 15px;
+}
+
+.customer-info__legend {
+    font-size: 1.8rem;
+    font-weight: 700;
 }
