--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -7,12 +7,12 @@
 }
 
 .custom-input__label {
-    /*width: 30%;*/
+    flex: 1;
     padding-right: 20px;
 }
 
 .custom-input__input {
-    /*width: 70%;*/
+    flex: 2;
     padding: 10px;
     font-size: 1.8rem;
     border: 1px solid #dedede;
