--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -7,12 +7,12 @@
 }
 
 .custom-select__label {
-    width: 30%;
+    flex: 1;
     padding-right: 20px;
 }
 
 .custom-select__select {
-    width: 70%;
+    flex: 2;
     padding: 10px;
     font-size: 1.8rem;
     border: 1px solid #dedede;
