--- a/src/pages/catalog/CatalogPage.css
+++ b/src/pages/catalog/CatalogPage.css
@@ -1,3 +1,7 @@
+.page-component--catalog {
+    padding-top: 30px;
+}
+
 .page-component__content {
     display: flex;
 }
@@ -28,4 +32,12 @@
 
 .values-list__label {
     cursor: pointer;
+}
+
+.filters-sidebar__filter-section {
+    padding-bottom: 20px;
+}
+
+.filter-section__header {
+    margin-bottom: 20px;
 }
