--- a/src/pages/admin/AdminPage.css
+++ b/src/pages/admin/AdminPage.css
@@ -5,23 +5,8 @@
     border-bottom: 1px solid #d2d2d2;
 }
 
-.admin-page__list-of-items {
-    margin: 0;
-    padding: 5px;
-}
-
-.list-of-items__item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    list-style-type: none;
-    padding: 15px 0;
-    border-bottom: 1px solid rgba(153,50,51,0.3);
-}
-
-.list-of-items__item:last-of-type {
-    border-bottom: none;
+.admin-page__content {
+    padding-top: 20px;
 }
 
 .item-attr {
@@ -35,7 +20,18 @@
     padding: 0;
 }
 
-.list-of-items__item .admin-button {
+.admin-page__catalog-item--buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+}
+
+.admin-page__catalog-item--buttons .admin-button {
+    display: block;
+    width: 100%;
+    padding: 0;
     color: #993233;
     background-color: #ffffff;
 }
@@ -62,4 +58,17 @@
 
 .admin-page__orders {
     padding: 20px 0;
+}
+
+.admin-page__catalog-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    word-wrap: break-word;
+    white-space: nowrap;
+}
+
+.admin-page__catalog-item-header {
+    text-align: center;
 }
