--- a/src/components/CustomerInfoForm/CustomerInfoForm.css
+++ b/src/components/CustomerInfoForm/CustomerInfoForm.css
@@ -19,3 +19,12 @@
     text-transform: uppercase;
     width: 100%;
 }
+
+.customer-info__buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.customer-info__button {
+    width: 25%;
+}
