--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -5,7 +5,7 @@
 .login-page__form {
     display: flex;
     flex-direction: column;
-    width: fit-content;
+    width: 500px;
     margin: 0 auto;
 }
 
