order update added

--- a/src/pages/orderItem/OrderItem.css
+++ b/src/pages/orderItem/OrderItem.css
@@ -16,8 +16,8 @@
 }
 
 .order-item__button-update {
-    color: #993233;
-    background-color: #ffffff;
+    /*color: #993233;*/
+    /*background-color: #ffffff;*/
 }
 
 .order-item__button-delete {
