--- a/src/components/BeverageShortView/BeverageShortView.css
+++ b/src/components/BeverageShortView/BeverageShortView.css
@@ -60,8 +60,8 @@
 
 }
 
-.bsv-footer__buttons {
-
+.bsv-footer__item.bsv-footer__buttons {
+    flex: none;
 }
 
 .bsv-image {
@@ -69,7 +69,7 @@
 }
 
 .bsv-footer__item {
-    flex: 1;
+    flex: 1 0 auto;
     position: relative;
 }
 
