--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -14,3 +14,10 @@
     align-self: center;
     margin-top: 10px;
 }
+
+.login-page__notification {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    padding: 15px 20px;
+}
