--- a/src/components/BeverageShortView/BeverageShortView.css
+++ b/src/components/BeverageShortView/BeverageShortView.css
@@ -69,6 +69,9 @@
 }
 
 .bsv-footer__item {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     flex: 1 0 auto;
     position: relative;
 }
