--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -6,3 +6,12 @@
     padding: 30px 0;
     text-align: center;
 }
+
+.contacts__info-section {
+    display: flex;
+    justify-content: space-between;
+}
+
+.info-section {
+    flex: 1 1 30%;
+}
