--- a/src/pages/userAccount/UserAccount.css
+++ b/src/pages/userAccount/UserAccount.css
@@ -9,3 +9,13 @@
 .user-account-form__button {
 
 }
+
+.user-account__user-name {
+    font-size: 2rem;
+    padding: 10px 0;
+}
+
+.user-account__user-email {
+    font-size: 2rem;
+    padding: 10px 0;
+}
